<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

    <group
        android:checkableBehavior="single">
        <item
            android:title="@string/menu_requests"
            android:id="@+id/menu_requests"
            android:icon="@drawable/ic_requests"
            />
            <item
                android:title="@string/menu_add_request"
                android:icon="@drawable/ic_add_request"
                android:id="@+id/menu_addrequest"/>


            <item
                android:title="@string/menu_map"
                android:id="@+id/menu_map"
                android:icon="@drawable/ic_map"
                />
    </group>

    <group
        android:checkableBehavior="single">
            <item
                android:title="@string/menu_about_us"
                android:id="@+id/menu_about_us"
                android:icon="@drawable/ic_about_us"
                />
    </group>
    </group>
</menu>