<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    >
    <include layout="@layout/toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_below="@+id/toolbar"
        >
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/tablerow1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/theme"
            android:id="@+id/textView8"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:gravity="center" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tablerow1"
        />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablerow2"
        android:layout_below="@+id/view1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/author"
            android:id="@+id/textView9"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edittextAuthor"
            android:gravity="center" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
         android:id="@+id/view2"
        android:layout_below="@id/tablerow2"
        />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tablerow3"
        android:layout_below="@+id/view2"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/date"
            android:id="@+id/textView10"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textViewDate"
            android:gravity="center" />
    </TableRow>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/view3"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_below="@id/tablerow3"
       />
    <android.support.design.widget.TextInputLayout
    android:id="@+id/description_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/view3"
        android:hint="@string/description">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view3" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendrequst"
        android:id="@+id/sendrequest"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />
   </RelativeLayout>
</RelativeLayout>